# yugioh-game

./: .gitignore  Dockerfile  LICENSE  alembic.ini  callback_manager.py  compile.sh  debug_duel.py  duel.py  duel_build.py  game.py  i18n.py  lflist.conf  merge_cdbs.sh  models.py  parsers.py  pyproject.toml  readme.md  requirements.txt  server.py  strings.py  update.sh  websockets.py  ygo.py
.github/workflows/: updater.yaml
alembic/: env.py
alembic/versions/: 0c9fd367e56b_additional_column_for_public_decks.py  3c0cbed04a90_remove_giveup_column_from_statistics.py  804005e79950_banning_support.py  9e957035487a_add_statistics.py  b03c62460f13_add_duel_rules_and_banlist_columns.py
etc/: ygopro-core.patch
locale/de/: motd.txt  strings.conf
locale/en/: motd.txt  strings.conf
locale/es/: strings.conf
locale/fr/: motd.txt  strings.conf
locale/it/: strings.conf
locale/ja/: strings.conf
locale/pt/: strings.conf
locale/th/: strings.conf
ygo/: banlist.py  callback_manager.py  card.py  channel.py  constants.py  deck_editor.py  duel.py  duel_menu.py  duel_reader.py  exceptions.py  globals.py  i18n.py  language_handler.py  models.py  parser.py  player.py  room.py  server.py  utils.py  websockets.py
ygo/channels/: challenge.py  chat.py  language_chat.py  say.py  tag.py  tell.py  watchers.py
ygo/invite/: invitable.py  joinable.py
ygo/message_handlers/: act_on_card.py  announce_attrib.py  announce_card.py  announce_card_filter.py  announce_number.py  announce_race.py  attack.py  battle.py  battle_activate.py  battle_attack.py  become_target.py  begin_damage.py  (+48 more)
(+36 files in other folders)
